bluec-tests/tests/valid/types_longlong/multi/maintain_stack_alignment.c
long long add_variables(long long x, long long y, int z){
    return x + y + z;
}