bluec-tests/tests/invalid/typedef/alias_keyword.c
int main(void) {
    typedef int while;
    return 0;
}
